Commit for pythonanywhere

--- a/bookviewer.html
+++ b/bookviewer.html
@@ -143,8 +143,9 @@
       return book
   }
   function getAllAjax(){
+    host=window.location.origin
     $.ajax({
-        "url": "http://127.0.0.1:5000/books",
+        "url": host+"/books",
         "method":"GET",
         "data":"",
         "dataType":"JSON",
@@ -161,9 +162,9 @@
   }
   function createBookAjax(book){
       console.log(JSON.stringify(book));
+      host= window.location.origin
       $.ajax({
-          "url":"http://127.0.0.1:5000/books",
-          
+          "url":host+"/books",
           "method":"POST",
           "data":JSON.stringify(book),
           "dataType":"JSON",
@@ -182,8 +183,9 @@
   }
   function updateBookAjax(book){
     console.log(JSON.stringify(book));
+    host= window.location.origin
       $.ajax({
-          "url":"http://127.0.0.1:5000/books/"+encodeURI(book.id),
+          "url":host+"/books/"+encodeURI(book.id),
           "method":"PUT",
           "data":JSON.stringify(book),
           "dataType":"JSON",
@@ -198,8 +200,9 @@
   }
   function deleteBookAjax(id){
       //console.log(JSON.stringify('deleting'+id));
+      host= window.location.origin
       $.ajax({
-          "url":"http://127.0.0.1:5000/books/"+encodeURI(id),
+          "url":host+"/books/"+encodeURI(id),
           "method":"DELETE",
           "data":"",
           "dataType":"JSON",
