Commit for pythonanywhere

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Tickets Dashboard</title>
-	<!--Link to stylesheet and d3.js  -->
 	<meta charset="utf-8" content="width=device-width, intitial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
@@ -97,9 +96,9 @@
 					</form>
 				</div>
 			</div>
-			<div>
+			<div style="margin: 50px 50px 0px 0px ;">
 				<!--Div where the chart will be created-->
-				<div id="pieChart">
+				<div  id="pieChart">
 				</div>
 			</div>
 		</div>
